[gd_scene load_steps=15 format=2]

[ext_resource path="res://Stage.gd" type="Script" id=1]
[ext_resource path="res://Shader.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mouse.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://PauseLayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Shaders/Vignette.shader" type="Shader" id=7]
[ext_resource path="res://Spaceship.tscn" type="PackedScene" id=16]
[ext_resource path="res://Sprites/SpaceBack.png" type="Texture" id=17]

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0, 0.164103, 0.348718, 0.430769, 0.553846 )
colors = PoolColorArray( 0, 0, 0, 1, 0.282353, 0.27451, 0, 1, 0.662745, 0.490196, 0, 1, 0.788235, 0.309804, 0, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=16]
gradient = SubResource( 15 )
width = 20

[sub_resource type="ShaderMaterial" id=14]
shader = ExtResource( 7 )
shader_param/MULTIPLIER = -1.0
shader_param/opacity = 0.0
shader_param/SCALE = 0.1
shader_param/SOFTNESS = 13.0
shader_param/gradient = SubResource( 16 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 1000, 800 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 0.122269, 1005.37 )

[sub_resource type="Curve2D" id=11]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -152, -144, 0, 0, 0, 0, 2056, -144, 0, 0, 0, 0, 2056, 1200, 0, 0, 0, 0, -152, 1192, 0, 0, 0, 0, -152, -144 )
}

[node name="Stage" type="Node"]
script = ExtResource( 1 )

[node name="Shader" parent="." instance=ExtResource( 2 )]

[node name="Mouse" parent="." instance=ExtResource( 3 )]
layer = 4

[node name="PauseLayer" parent="." instance=ExtResource( 5 )]
layer = 3

[node name="HUD" parent="." instance=ExtResource( 4 )]
layer = 2

[node name="SadLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Overheat" type="BackBufferCopy" parent="SadLayer"]
z_index = 2
copy_mode = 2
rect = Rect2( 0, 0, 400, 225 )
__meta__ = {
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="SadLayer/Overheat"]
material = SubResource( 14 )
anchor_right = 4.8
anchor_bottom = 4.8
margin_right = -0.00012207
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Spaceship" parent="." instance=ExtResource( 16 )]
position = Vector2( 933, 387 )

[node name="Node2D" type="Node2D" parent="."]
z_index = -2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="Node2D"]
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )
custom_styles/panel = SubResource( 17 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="IncreaseDifficultyTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="BoundaryBox" type="Node2D" parent="."]
visible = false
position = Vector2( 0, 540 )

[node name="BoundarySide" type="StaticBody2D" parent="BoundaryBox"]
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundaryBox/BoundarySide"]
shape = SubResource( 10 )

[node name="BoundarySide2" type="StaticBody2D" parent="BoundaryBox"]
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundaryBox/BoundarySide2"]
position = Vector2( 1920, 0 )
shape = SubResource( 10 )

[node name="BoundaryTop" type="StaticBody2D" parent="BoundaryBox"]
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundaryBox/BoundaryTop"]
position = Vector2( 960, -540 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="BoundaryTop2" type="StaticBody2D" parent="BoundaryBox"]
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundaryBox/BoundaryTop2"]
position = Vector2( 960, 280 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="Path2D" type="Path2D" parent="."]
visible = false
curve = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( -152, -144 )

[connection signal="game_over" from="Spaceship" to="." method="_on_Spaceship_game_over"]
[connection signal="overheat" from="Spaceship" to="HUD" method="_on_Spaceship_overheat"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="IncreaseDifficultyTimer" to="." method="_on_IncreaseDifficultyTimer_timeout"]
